fix: modal overflow

--- a/src/styles/components/_organism.modal.scss
+++ b/src/styles/components/_organism.modal.scss
@@ -162,8 +162,7 @@
     }
   }
 
-  &__content,
-  form {
+  &__content {
     overflow: hidden auto;
   }
 
